调整逻辑